// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories storyshots Atoms/Button Button Click 1`] = `
<button
  className="css-93rm9z-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  ClickEv Button
</button>
`;

exports[`Stories storyshots Atoms/Button Contained 1`] = `
<button
  className="css-93rm9z-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Contained Button
</button>
`;

exports[`Stories storyshots Atoms/Button Custom Background Color 1`] = `
<button
  className="css-1q0rilk-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": "#ee6d6d",
      "color": undefined,
    }
  }
>
  Custom Color
</button>
`;

exports[`Stories storyshots Atoms/Button Custom Text Color 1`] = `
<button
  className="css-1q0rilk-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": "green",
    }
  }
>
  Custom Color
</button>
`;

exports[`Stories storyshots Atoms/Button Error 1`] = `
<button
  className="error css-1q0rilk-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Error Button
</button>
`;

exports[`Stories storyshots Atoms/Button Large 1`] = `
<button
  className="css-1trca0z-StyledButton e11gl8v40"
  size="large"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Large Button
</button>
`;

exports[`Stories storyshots Atoms/Button Normal 1`] = `
<button
  className="css-93rm9z-StyledButton e11gl8v40"
  size="normal"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Normal Button
</button>
`;

exports[`Stories storyshots Atoms/Button Outlined 1`] = `
<button
  className="css-1x4nc0m-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Outlined Button
</button>
`;

exports[`Stories storyshots Atoms/Button Secondary 1`] = `
<button
  className="secondary css-1q0rilk-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Secondary Button
</button>
`;

exports[`Stories storyshots Atoms/Button Small 1`] = `
<button
  className="css-1nzha8z-StyledButton e11gl8v40"
  size="small"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Small Button
</button>
`;

exports[`Stories storyshots Atoms/Button Success 1`] = `
<button
  className="success css-1q0rilk-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Success Button
</button>
`;

exports[`Stories storyshots Atoms/Button Text 1`] = `
<button
  className="css-1q0rilk-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Text Button
</button>
`;

exports[`Stories storyshots Atoms/Button Warning 1`] = `
<button
  className="warning css-1q0rilk-StyledButton e11gl8v40"
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  Warning Button
</button>
`;
